Fix css on mobile

--- a/webapp/client/main.styl
+++ b/webapp/client/main.styl
@@ -1,9 +1,9 @@
 .main
-  max-width 1080px
-  margin 30px auto
+  
 
   .banner
-    margin 30px
+    max-width 1080px
+    margin 30px auto
     padding 30px
     color #414042
     background #F1FBF9
@@ -22,6 +22,7 @@
       margin 15px auto
 
   .results
+    padding 0px 30px
 
     .result
       background white
@@ -34,6 +35,7 @@
         color #414042
         border-radius 12px
         text-align center
+        box-shadow 0px 0px 0px #888888
 
         hr
           border-top 4px double #414042
