--- a/webapp/client/result.styl
+++ b/webapp/client/result.styl
@@ -8,6 +8,9 @@
   border-bottom-left-radius 0px
   border-bottom-right-radius 0px
 
+  @media only screen and (min-device-width : 375px) and (max-device-width : 667px)
+    max-width 3000px
+
   h1
     color #414042
 
