--- a/webapp/client/submit.styl
+++ b/webapp/client/submit.styl
@@ -5,6 +5,9 @@ body
   max-width 720px
   margin auto
   padding 12px 80px
+
+  @media only screen and (min-device-width : 375px) and (max-device-width : 667px)
+    max-width 3000px
   
   .question
     margin 30px
